--- a/package.json
+++ b/package.json
@@ -4,18 +4,21 @@
   "description": "small demo app to demonstrate the power RxJS bindings",
   "main": "index.js",
   "scripts": {
-    "start": "node node_modules/.bin/webpack-dev-server --content-base app"
+    "start": "node node_modules/.bin/webpack-dev-server --inline --content-base app"
   },
   "author": "mkalish",
   "license": "MIT",
   "devDependencies": {
     "angular": "^1.4.8",
     "babel-core": "^6.3.26",
+    "babel-plugin-syntax-object-rest-spread": "^6.3.13",
+    "babel-plugin-transform-object-rest-spread": "^6.3.13",
     "babel-preset-es2015": "^6.3.13",
     "ng-annotate-loader": "0.0.10"
   },
   "dependencies": {
     "babel-loader": "^6.2.0",
+    "jquery": "^2.2.0",
     "rx-angular": "^1.0.4",
     "webpack": "^1.12.9",
     "webpack-dev-server": "^1.14.0"
